force-app/main/default/objects/Aluno__c/fields/Classe__c.field-meta.xml
<CustomField>
    <fullName>Classe__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Classe que o aluno esta estudando.</description>
    <label>Classe</label>
    <referenceTo>Classe__c</referenceTo>
    <relationshipLabel>Alunos</relationshipLabel>
    <relationshipName>Alunos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>