force-app/main/default/objects/Aluno__c/fields/CPF__c.field-meta.xml
<CustomField>
    <fullName>CPF__c</fullName>
    <description>CPF do aluno.</description>
    <externalId>true</externalId>
    <inlineHelpText>Entre com o CPF do aluno.</inlineHelpText>
    <label>CPF</label>
    <length>14</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>