force-app/main/default/objects/Aluno__c/fields/Data_de_Nascimento__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Nascimento__c</fullName>
    <description>Data de nascimento do aluno.</description>
    <inlineHelpText>Entre com a data de nascimento do aluno.</inlineHelpText>
    <label>Data de Nascimento</label>
    <required>true</required>
    <type>Date</type>
</CustomField>