force-app/main/default/objects/Aluno__c/fields/Escola__c.field-meta.xml
<CustomField>
    <fullName>Escola__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Escola</description>
    <label>Escola</label>
    <referenceTo>Escola__c</referenceTo>
    <relationshipLabel>Alunos</relationshipLabel>
    <relationshipName>Alunos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>