force-app/main/default/objects/Aluno__c/fields/Nome_Completo__c.field-meta.xml
<CustomField>
    <fullName>Nome_Completo__c</fullName>
    <formula>Name  &amp;  &apos; &apos; &amp; Sobrenome__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Completo</label>
    <type>Text</type>
</CustomField>