force-app/main/default/objects/Aluno__c/fields/Nome_da_Classe__c.field-meta.xml
<CustomField>
    <fullName>Nome_da_Classe__c</fullName>
    <formula>Classe__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome da Classe</label>
    <type>Text</type>
</CustomField>