force-app/main/default/objects/Aluno__c/fields/Nome_da_Escola__c.field-meta.xml
<CustomField>
    <fullName>Nome_da_Escola__c</fullName>
    <formula>Escola__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome da Escola</label>
    <type>Text</type>
</CustomField>