force-app/main/default/objects/Aluno__c/fields/Situacao__c.field-meta.xml
<CustomField>
    <fullName>Situacao__c</fullName>
    <description>imgStatus</description>
    <formula>IF(Ativo__c, IMAGE(&quot;/resource/IndicadorVerde&quot;, &quot;imgVerde&quot;, 25, 25), IMAGE(&quot;/resource/1577468329000/IndicadorVermelho?&quot;, &quot;imgVermelho&quot;, 25, 25))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>imgStatus</inlineHelpText>
    <label>Situação</label>
    <type>Text</type>
</CustomField>