force-app/main/default/objects/Aluno__c/fields/Sobrenome__c.field-meta.xml
<CustomField>
    <fullName>Sobrenome__c</fullName>
    <description>Sobrenome do aluno.</description>
    <inlineHelpText>Entre com o sobrenome do aluno.</inlineHelpText>
    <label>Sobrenome</label>
    <length>155</length>
    <required>true</required>
    <type>Text</type>
</CustomField>