force-app/main/default/objects/Aluno__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Ativo__c</columns>
    <columns>Data_de_Nascimento__c</columns>
    <columns>Classe__c</columns>
    <columns>Nome_Completo__c</columns>
    <columns>Nome_da_Classe__c</columns>
    <columns>Escola__c</columns>
    <columns>Nome_da_Escola__c</columns>
    <columns>Situacao__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>